; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_ctldir.c_zfsctl_snapshot_name.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_ctldir.c_zfsctl_snapshot_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@EILSEQ = common dso_local global i32 0, align 4
@ENAMETOOLONG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"@\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i32, i8*)* @zfsctl_snapshot_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfsctl_snapshot_name(%struct.TYPE_3__* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %10, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i64 @zfs_component_namecheck(i8* %14, i32* null, i32* null)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %4
  %18 = load i32, i32* @EILSEQ, align 4
  %19 = call i32 @SET_ERROR(i32 %18)
  store i32 %19, i32* %5, align 4
  br label %41

20:                                               ; preds = %4
  %21 = load i32*, i32** %10, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = call i32 @dmu_objset_name(i32* %21, i8* %22)
  %24 = load i8*, i8** %9, align 8
  %25 = call i32 @strlen(i8* %24)
  %26 = add nsw i32 %25, 1
  %27 = load i8*, i8** %7, align 8
  %28 = call i32 @strlen(i8* %27)
  %29 = add nsw i32 %26, %28
  %30 = load i32, i32* %8, align 4
  %31 = icmp sge i32 %29, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %20
  %33 = load i32, i32* @ENAMETOOLONG, align 4
  %34 = call i32 @SET_ERROR(i32 %33)
  store i32 %34, i32* %5, align 4
  br label %41

35:                                               ; preds = %20
  %36 = load i8*, i8** %9, align 8
  %37 = call i32 @strcat(i8* %36, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %38 = load i8*, i8** %9, align 8
  %39 = load i8*, i8** %7, align 8
  %40 = call i32 @strcat(i8* %38, i8* %39)
  store i32 0, i32* %5, align 4
  br label %41

41:                                               ; preds = %35, %32, %17
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i64 @zfs_component_namecheck(i8*, i32*, i32*) #1

declare dso_local i32 @SET_ERROR(i32) #1

declare dso_local i32 @dmu_objset_name(i32*, i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @strcat(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
